Corrected margins for centered columns on mobile display

--- a/css/gumby.css
+++ b/css/gumby.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset "CP850";
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 /**
 * Gumby Framework
@@ -334,7 +334,7 @@ img { -ms-interpolation-mode: bicubic; }
   .container { min-width: 0; margin-left: 0; margin-right: 0; }
   .row { width: 100%; min-width: 0; margin-left: 0; margin-right: 0; }
   .row .row .column, .row .row .columns { padding: 0; }
-  .row .centered { margin: 0 !important; }
+  .row .centered { margin-left: 0 !important; }
   .column, .columns { width: auto !important; float: none; margin-left: 0; margin-right: 0; }
   .column:last-child, .columns:last-child { margin-right: 0; float: none; }
   [class*="column"] + [class*="column"]:last-child { float: none; }
